# Portal

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: build-apk.yml  build-pr-apk.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/animator/: logo_rotate.xml
app/src/main/res/drawable/: baseline_add_location_24.xml  baseline_add_location_alt_24.xml  baseline_adjust_24.xml  baseline_close_24.xml  baseline_complete_24.xml  baseline_control_camera_24.xml  baseline_edit_location_alt_24.xml  baseline_info_outline_24.xml  baseline_keyboard_arrow_down_24.xml  baseline_keyboard_arrow_up_24.xml  baseline_label_important_24.xml  baseline_location_on_24.xml  baseline_location_pin_24.xml  baseline_lock_24.xml  baseline_lock_open_24.xml  baseline_manual_24.xml  baseline_my_location_24.xml  ripple_effect.xml  (+17 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
nmea/: build.gradle.kts
nmea/src/test/java/: Test1.kt
refs/: README.md
refs/10.0.0/: README.md
refs/11.0.0/: README.md
refs/12.0.0/: README.md
refs/13.0.0/: README.md
refs/14.0.0/: README.md
refs/15.0.0/: README.md
refs/7.0.0_r1/: IGnssStatusListener.aidl  README.md
refs/7.1.1_r6/: README.md
refs/8.0.0_r4/: README.md
refs/9.0.0_r3/: README.md
system-api/: build.gradle.kts
xposed/: README.md  build.gradle.kts
xposed/src/main/assets/: xposed_init
xposed/src/main/cpp/: CMakeLists.txt  dobby_hook.h  elf_util.cpp  logging.h  main.cpp  sensor_hook.cpp  sensor_hook.h
(+111 files in other folders)
